Done with explorer mode

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             be
             annoying. Meoooow. Lick yarn hanging out of own butt friends are not food poop on grasses so take a big
             fluffing
-            crap 💩 pet me pet me pet me pet me, bite, scratch, why are you petting me. Headbutt owner's knee pretend
+            crap pet me pet me pet me pet me, bite, scratch, why are you petting me. Headbutt owner's knee pretend
             not
             to
             be evil grab pompom in mouth and put in water dish or human give me attention meow or prance along on top
